'修改config_yml的配置文件'

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ owner:
   name:           shursulei
   avatar:         avatar.png
   bio:            "Designer."
-  email:          alex@collectivelymade.com
+  email:          1368455669@qq.com
   twitter:        alexanderussell
   github:         alexanderussell
   instagram:      alexanderussell
